Add two-qubit ancilla python file (v1)
Add select operator, state prep

--- a/Simple Implementation - One Qubit.ipynb
+++ b/Simple Implementation - One Qubit.ipynb
@@ -31,32 +31,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfd5801d",
-   "metadata": {},
-   "source": [
-    "## Prerequisites"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "363e9ba0",
-   "metadata": {},
-   "source": [
-    "TODO\n",
-    "\n",
-    "ASK: Appendix, or Prerequisites? Which one is better?\n",
-    "\n",
-    "### Unitary matrices\n",
-    "\n",
-    "TODO\n",
-    "\n",
-    "### (Oblivious) Amplitude amplification\n",
-    "\n",
-    "TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "626b236a",
    "metadata": {},
    "source": [
@@ -138,14 +112,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c761bbc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "5c562b01",
    "metadata": {},
@@ -169,14 +135,6 @@
     "Then, clearly, $H$ is non-unitary, since $HH^\\dagger\\neq I_2$. However, we can write $H = \\frac1{2} I - \\frac1{2} Z$, thus expressing $H$ as the sum of two unitary operations.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84f0d771",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -286,14 +244,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "90f54a1f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "f5a2476d",
    "metadata": {},
@@ -316,11 +266,7 @@
    "source": [
     "### Notes on implementation\n",
     "\n",
-    "Input, output as circuits. Advantage: independent of starting state, so if initial state can be efficiently prepared, then we can efficiently simulate Hamiltonian. Drawback: need to have the circuits for each unitary used prepared beforehand.\n",
-    "\n",
-    "### TODOs:\n",
-    "\n",
-    "Verifier, Matrix-to-circuit, Circuit-to-matrix."
+    "Input, output as circuits. Advantage: independent of starting state, so if initial state can be efficiently prepared, then we can efficiently simulate Hamiltonian. Drawback: need to have the circuits for each unitary used prepared beforehand."
    ]
   },
   {
