--- a/CSC299 - Report 1 - Simple Implementation - One Qubit Ancilla.ipynb
+++ b/CSC299 - Report 1 - Simple Implementation - One Qubit Ancilla.ipynb
@@ -154,7 +154,7 @@
     "\n",
     "Therefore, we observe that:\n",
     "\\begin{align*}\n",
-    "    P_0 A\\left| 0 \\right\\rangle\\left| \\psi \\right\\rangle &= \\\\\n",
+    "    P_0 A\\left| 0 \\right\\rangle\\left| \\psi \\right\\rangle &= (3P_0 W - 4 P_0  \\\\\n",
     "    &= \\left(\\frac3{s}-\\frac4{s^3}\\right) \\left| 0 \\right\\rangle H \\left| \\psi \\right\\rangle\n",
     "\\end{align*}"
    ]
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ebd96f8",
+   "id": "9d34d2b2",
    "metadata": {},
    "source": [
     "# Amplitude amplification\n",
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a71dfacd",
+   "id": "d94f7ea8",
    "metadata": {},
    "source": [
     "# Testing\n",
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ecaeecc",
+   "id": "5b27b035",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5dd2043",
+   "id": "e20dbd34",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fa15c3e",
+   "id": "15a36400",
    "metadata": {},
    "outputs": [],
    "source": []
