--- a/CSC299 - Appendix.ipynb
+++ b/CSC299 - Appendix.ipynb
@@ -7,19 +7,22 @@
    "source": [
     "# Appendix 1A: Unitary matrices\n",
     "\n",
-    "## Unitary matrices\n",
+    "## Unitary operators\n",
     "\n",
-    "### Definition: Unitary matrices\n",
-    "TODO\n",
+    "### Definition: Unitary operators\n",
+    "Recall that each operator on a complex Hilbert space, $A$, has a corresponding adjoint operator, $A^\\dagger$. We say that an operator, $U$, is unitary if we have that $AA^\\dagger = I = A^\\dagger A$, where $I$ denotes the identity operator of appropriate dimension.\n",
+    "\n",
+    "### Definition: Isometries\n",
+    "An operator, $S$, is said to be an isometry if it preserves \n",
     "\n",
     "Note: Unitary is not the same as isometry\n",
     "\n",
     "### Proposition: All unitary matrices are isometries, but not all isometries are unitary.\n",
     "TODO\n",
     "\n",
-    "## Pauli matrices\n",
+    "## Pauli operators\n",
     "\n",
-    "### Definition: Pauli matrices\n",
+    "### Definition: Pauli operators\n",
     "TODO\n",
     "\n",
     "### Proposition: Pauli matrices form a basis\n",
@@ -96,12 +99,14 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a718fc6",
+   "cell_type": "markdown",
+   "id": "ad1f6dad",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Appendix 2A: 2-qubit State preparation\n",
+    "\n",
+    "TODO"
+   ]
   },
   {
    "cell_type": "code",
@@ -120,12 +125,14 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8fd6bb4",
+   "cell_type": "markdown",
+   "id": "04d8477a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Appendix 3A: State preparation (general case)\n",
+    "\n",
+    "TODO"
+   ]
   },
   {
    "cell_type": "code",
