Update reports, Add tests

--- a/CSC299 - Report 2 - Implementation with 2 Ancilla.ipynb
+++ b/CSC299 - Report 2 - Implementation with 2 Ancilla.ipynb
@@ -1,18 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "152a7f84",
-   "metadata": {},
-   "source": [
-    "# CSC299: Summer 2021: Report 2 - Implementation of LCU with 2 Ancilla\n",
-    "\n",
-    "## Arkaprava Choudhury"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "88358a8d",
    "metadata": {},
    "outputs": [],
@@ -30,22 +20,18 @@
    "id": "97388db3",
    "metadata": {},
    "source": [
+    "# Goals of this report\n",
+    "\n",
     "We have previously seen how to create the LCU circuit in the case of having two unitary operations in our linear combination (i.e., where we only need one qubit ancilla). Now, we try to extend this definition of the LCU circuit to the case of having 2 qubits in the ancilla, which will allow for having up to 4 unitary operations in our expansion.\n",
     "\n",
     "The main challenge in such a step is the fact that having a simplistic implementation of the select operator of the LCU algorithm will result in difficulty in implementing the prepare operator, and vice versa. For this report, we utilize the simple definition for the select operator (as explained in the previous report), with a trade-off of having a more detailed approach for the prepare operator.\n",
+    "\n",
+    "# Implementing Prepare operator\n",
     "\n",
     "Now, for the prepare circuit, we are only concerned about what the $\\left| 00 \\right\\rangle$ state gets mapped to, and we are not concerned about what the other states get mapped to, since we shall only ever apply the operator to the $\\left| 00 \\right\\rangle$ state. The difficulty in such an implementation is that we do not know which circuit would give such a result, and hence, the problem effectively reduces to the general problem of state preparation. For further details on the methods used below, refer to the State Preparation section in the Appendix, or alternatively, the sepearate notebook for State Preparation, which is linked through the Appendix.\n",
     "\n",
     "With that said, the following cells demonstrate how we defined the prepare circuit for the case of 2 qubit ancilla."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c601c2c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -57,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "aff313fa",
    "metadata": {},
    "outputs": [],
    "source": [
     "def fidelity(wfn_target: tq.wavefunction.qubit_wavefunction.QubitWaveFunction,\n",
     "             qc: tq.QCircuit) -> tq.Objective:\n",
-    "    \"\"\"Return the fidelity ...\"\"\"\n",
+    "    \"\"\"Return the fidelity between wfn_target and the expectation value of qc\"\"\"\n",
     "    rho_targ = tq.paulis.Projector(wfn=wfn_target)\n",
     "    objective = tq.Objective.ExpectationValue(U=qc, H=rho_targ)\n",
     "    return objective"
@@ -80,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6750498e",
    "metadata": {},
    "outputs": [],
@@ -91,7 +77,7 @@
     "    with variables theta, phi, lambda for each qubit.\n",
     "\n",
     "    Preconditions:\n",
-    "        - TODO\n",
+    "        - len(anc) == 2\n",
     "    \"\"\"\n",
     "\n",
     "    # define variables\n",
@@ -109,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "70f4fef2",
    "metadata": {},
    "outputs": [],
@@ -131,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2f5c6d73",
    "metadata": {},
    "outputs": [],
@@ -141,8 +127,9 @@
     "    \"\"\"Return the circuit corresponding to the prepare operator.\n",
     "\n",
     "    Preconditions:\n",
-    "        - ...\n",
-    "        - TODO\n",
+    "        - all(coeff != 0 for coeff in [pair[0] for pair in unitaries])\n",
+    "        - len(ancilla) == 2\n",
+    "        - 2 < len(unitaries) <= 4\n",
     "    \"\"\"\n",
     "    m = len(ancilla)\n",
     "\n",
@@ -206,12 +193,14 @@
    "id": "23e05957",
    "metadata": {},
    "source": [
+    "# Implementing Select operator\n",
+    "\n",
     "Much of the implementation of the select operator remains unchanged from the previous report except for the one additional subroutine used to calculate how to use the controls for each controlled unitary in the expansion. The following cells show how this was implemented:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a07e7da3",
    "metadata": {},
    "outputs": [],
@@ -291,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2a0e0420",
    "metadata": {},
    "outputs": [],
@@ -322,39 +311,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "483a974d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def lcu_2ancilla(ancilla, unitaries: list[tuple[float, tq.QCircuit]]) -> tq.QCircuit:\n",
     "    \"\"\"Return the circuit for the LCU algorithm excluding the amplitude amplification procedure\"\"\"\n",
-    "    ..."
+    "    prepare = prepare_operator_optimize_2anc(ancilla, unitaries)\n",
+    "    return prepare + select_operator_optimize_2anc(ancilla, sum_of_unitaries) + prepare.dagger()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5175fcd7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "064feb3e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b199913",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -423,28 +389,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36b94b65",
-   "metadata": {},
-   "source": [
-    "# Testing\n",
-    "\n",
-    "TODO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f583ab1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "98341854",
    "metadata": {},
    "source": [
-    "# End of document. Next steps: General case"
+    "# References\n",
+    "\n",
+    "TODO"
    ]
   }
  ],
